[package]
name = "rust-saml-idp"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "High-performance SAML Identity Provider service written in Rust"

[dependencies]
actix-web = { version = "4.3", features = ["openssl"] }
tokio = { version = "1.28", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
config = "0.13"
log = "0.4"
env_logger = "0.10"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.3", features = ["v4", "serde"] }
openssl = "0.10"
base64 = "0.21"
url = "2.3"
xml-rs = "0.8"
rand = "0.8"
futures = "0.3"
derive_more = "0.99"
dashmap = "5.4"
num_cpus = "1.15"